--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                 Become <br>Meta Verified
             
             </h1>
-            <a class='btn' href='/help.html'>Apply</a>
+            <a class='btn' href='/validation.html'>Apply</a>
             <p>
                 Grow your social presence with Meta Verified – a new subscription
  <br>
